--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,9 +18,17 @@
     }
 
     .body-tr {
-        @apply  border-b
+        @apply border-b
         odd:bg-white
         even:bg-gray-50
+    }
+
+
+    .card {
+        background-color: theme('colors.white');
+        border-radius: theme('borderRadius.lg');
+        padding: theme('spacing.6');
+        box-shadow: theme('boxShadow.xl');
     }
 
 }
